gate-centos-lb-ceph-online-multinodes/service-mesh/servicemesh-kiali-resource/Ingress_kiali.yaml
---
# Source: servicemesh-kiali-resource/templates/kiali-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: kiali.k2-node01
      http:
        paths:
        - backend:
            service:
              name: kaili
              port:
                number: 20001
          path: /
          pathType: Prefix
  tls:
    - hosts:
      - dashboard-ahnsk.taco-cat.xyz
      secretName: taco-cat-tls
